@@ -136,11 +136,16 @@ public abstract class HostServicesDelegate {
         public void showDocument(final String uri) {
             try {
                 if (PlatformUtil.isMac()) {
-                    Runtime.getRuntime().exec(
-                            "open " + uri);
+                    Runtime.getRuntime().exec(new String[] {
+                        "open",
+                        uri
+                    });
                 } else if (PlatformUtil.isWindows()) {
-                    Runtime.getRuntime().exec(
-                            "rundll32 url.dll,FileProtocolHandler " + uri);
+                    Runtime.getRuntime().exec(new String[] {
+                        "rundll32",
+                        "url.dll,FileProtocolHandler",
+                        uri
+                    });
                 } else { //assume Unix or Linux
                     String browser = null;
                     for (String b : browsers) {
